--- a/srcs/config.json
+++ b/srcs/config.json
@@ -1,10 +1,10 @@
 {
     "layers": [
-      {"units": 24, "activation": "sigmoid"},
-      {"units": 24, "activation": "sigmoid", "initializer": "xavierUniform"},
-      {"units": 24, "activation": "sigmoid", "initializer": "xavierUniform"},
-      {"units": 24, "activation": "sigmoid", "initializer": "xavierUniform"},
-      {"units": 2, "activation": "softmax", "initializer": "heUniform"}
+      {"units": 24, "activation": "selu"},
+      {"units": 24, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 24, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 24, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 2, "activation": "softmax", "initializer": "xavierUniform"}
     ],
     "learning_rate": 0.0001,
     "batch_size": 8,
