--- a/resources/models/leaky/config.json
+++ b/resources/models/leaky/config.json
@@ -10,10 +10,14 @@
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
+      {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
+      {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
       {"units": 2, "activation": "softmax", "initializer": "xavierUniform"}      
     ],
-    "learning_rate": 0.00001,
+    "learning_rate": 0.0001,
     "batch_size": 8,
-    "epochs": 300,
+    "epochs": 1000,
+    "use_momentum": false,
+    "momentum": 0.8,
     "loss_function": "binaryCrossentropy"
   }
