--- a/srcs/config.json
+++ b/srcs/config.json
@@ -1,19 +1,21 @@
 {
     "layers": [
-      {"units": 50, "activation": "selu"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
-      {"units": 50, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 32, "activation": "selu"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
+      {"units": 16, "activation": "selu", "initializer": "lecunNormal"},
       {"units": 2, "activation": "softmax", "initializer": "xavierUniform"}      
     ],
-    "learning_rate": 0.00001,
+    "learning_rate": 0.00004,
     "batch_size": 8,
-    "epochs": 300,
-    "loss_function": "binaryCrossentropy"
+    "epochs": 2000,
+    "loss_function": "binaryCrossentropy",
+    "use_momentum": true,
+    "momentum": 0.9
   }
