--- a/rsrcs/models/leaky/config.json
+++ b/rsrcs/models/leaky/config.json
@@ -1,6 +1,6 @@
 {
-    "hidden_layers": [
-      {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
+    "layers": [
+      {"units": 50, "activation": "leaky_relu"},
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
       {"units": 50, "activation": "leaky_relu", "initializer": "heUniform"},
